<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.login.LoginActivity">

    <LinearLayout
        android:id="@+id/Login_top"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal" >

    </LinearLayout>

    <EditText
        android:id="@+id/Login_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Login_top"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="text"
        android:hint="@string/login_account"
        android:textSize="@dimen/login_text_size" />

    <EditText
        android:id="@+id/Login_passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@id/Login_editText"
        android:inputType="textPassword"
        android:hint="@string/login_password"
        android:textSize="@dimen/login_text_size"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_below="@id/Login_passwordText"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/login_button"/>

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/Login_button"
            android:text="@string/login_button_register"/>

    </RelativeLayout>

</RelativeLayout>
